src/test/ui/const-generics/infer/uninferred-consts.min.stderr
error[E0282]: type annotations needed
  --> $DIR/uninferred-consts.rs:13:9
   |
LL |     Foo.foo();
   |         ^^^ cannot infer the value of const parameter `A` declared on the associated function `foo`
   |
help: consider specifying the const argument
   |
LL |     Foo.foo::<A>();
   |         ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
